Fix bug #50140: With default compilation option, php symbols are unresolved for nsapi